@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Feb 2014; Ulrich Müller <ulm@gentoo.org> erc-extras-5.3.ebuild,
+  metadata.xml:
+  Add missing dependencies on app-emacs/bbdb and app-emacs/chess.
+
 *erc-extras-5.3 (20 Feb 2014)
 
   20 Feb 2014; Ulrich Müller <ulm@gentoo.org> +erc-extras-5.3.ebuild,
